# aoc

./: .gitignore  README.md  pyproject.toml  template.txt
2024/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py
aoc/: __init__.py  answers.py  api.py  context.py  logger.py  setup.py
